--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
           <h1 id="project_title">Dgj20140524</h1>
           <h2 id="project_tagline">dorasu game jam 20140524</h2>
-
+			<a href="ama.html">ここからあそべます！</a>
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/yosukeadachi/DGJ20140524/zipball/master">Download this project as a .zip file</a>
               <a class="tar_download_link" href="https://github.com/yosukeadachi/DGJ20140524/tarball/master">Download this project as a tar.gz file</a>
